<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="buttonSpotifyStreamer">Spotify Streamer</string>
    <string name="buttonScoresApp">Scores app</string>
    <string name="buttonLibraryApp">Library app</string>
    <string name="buttonBuildItBigger">Build It Bigger</string>
    <string name="buttonXyzReader">XYZ Reader</string>
    <string name="buttonCapstone">Capstone: my own app</string>
    <string name="textViewTitle">My Nanodegree Apps!</string>
    <string name="toastText">This button will launch my</string>
</resources>