<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/textViewTitle"
            android:textSize="25sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorButtonOrange"
            android:onClick="onClick"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/buttonSpotifyStreamer" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorButtonOrange"
            android:onClick="onClick"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/buttonScoresApp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorButtonOrange"
            android:onClick="onClick"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/buttonLibraryApp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorButtonOrange"
            android:onClick="onClick"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/buttonBuildItBigger" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorButtonOrange"
            android:onClick="onClick"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/buttonXyzReader" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorRed"
            android:onClick="onClick"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/buttonCapstone"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</ScrollView>